scripts/nullaway/nullgtn/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8.txt
../nullgtn/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:104: error: [NullAway] initializer method does not guarantee @NonNull fields _portagedItems (line 56), _subStacks (line 61), _positionLabel (line 66) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Stack(Unit unit, int unitID, int stackID) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:158: error: [NullAway] initializer method does not guarantee @NonNull fields _portagedItems (line 56), _subStacks (line 61) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Stack(Stack stack) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:218: error: [NullAway] dereferenced expression _subStacks.get(_subStacks.keySet().toArray()[0]) is @Nullable
            return _subStacks.get(_subStacks.keySet().toArray()[0]).toString();
                                                                   ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:385: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return subStack;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:431: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return subStack;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:483: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        stack.setPositionLabel(null);
                               ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/counters/Unit.java:60: error: [NullAway] initializer method does not guarantee @NonNull field _description (line 47) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    protected Unit() {
              ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:75: error: [NullAway] dereferenced expression _sides.get(side) is @Nullable
        if ((!_setupComplete) && _sides.get(side).addPlayer(name, nationality, entryTurn)) {
                                                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:89: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return _sides.get(side).player(name);
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:89: error: [NullAway] dereferenced expression _sides.get(side) is @Nullable
        return _sides.get(side).player(name);
                               ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:98: error: [NullAway] dereferenced expression _sides.get(Side.Sides.ALLIES) is @Nullable
        _alliedPlayers.addAll(_sides.get(Side.Sides.ALLIES).playerList());
                                                           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:100: error: [NullAway] dereferenced expression _sides.get(Side.Sides.AXIS) is @Nullable
        _axisPlayers.addAll(_sides.get(Side.Sides.AXIS).playerList());
                                                       ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/utilities/Serialization.java:94: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return object;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/counters/Fighting.java:226: error: [NullAway] parameter newIdentity is @NonNull, but parameter in superclass method jasl.counters.Identity.setIdentity(java.lang.String) is @Nullable
    public final void setIdentity(String newIdentity) {
                                         ^
    (see http://t.uber.com/nullaway )
14 errors
